# American-Options-Pricing

./: README.md  pyproject.toml
notebooks/: pricer_tests_and_convergence.ipynb
src/option_pricing/: __init__.py  binomial.py  black_scholes.py  lsmc.py  models.py
tests/: test_pricers.py
